# Autonomous-search-and-retrieval-robot-project

./: .gitmodules  07010_RPLIDAR_adapter.stl  README.md  key  key.pub  lidar_cmds.sh
UOMDocumentationForLeoRover-main/: README.md
arm_test_files/: README.md  ee_pose_components.py
cad models/: readme.md
camera_manipulator/: First_test_demo.py  README  README.md  manipulator_control（abandoned）.py  no_navi_version.py
camera_manipulator/obj_gsp/: package.xml  setup.py
camera_manipulator/obj_gsp/launch/: leolaunch1.py
camera_manipulator/obj_gsp/obj_gsp/: Object_detection_with_service.py  detect_object.py  manipulator_control(old version).py  manipulator_control.py
color_object_detector/: package.xml  setup.cfg  setup.py
color_object_detector/color_object_detector/: detect_object.py  get_target_position.py
leo_description_team6/: package.xml  setup.cfg  setup.py
leo_description_team6/config/: diff_drive_control.yaml
leo_description_team6/launch/: sim_robot.launch.py  view_model.launch.py
leo_description_team6/urdf/: leo.urdf.xacro  leo_sim.urdf.xacro  macros.urdf.xacro
leo_sim_ws/install/: local_setup.sh  setup.sh
leo_sim_ws/log/: latest_build
manipulator_test/: bartender.py  gripper_test.py
manipulator_test/obj_gsp/: package.xml  setup.cfg  setup.py
manipulator_test/obj_gsp/launch/: launch.py
navigation_demos/launch/: nav_demo.launch.py
requirements_verification/: README.md
rp_ws/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
rp_ws/log/: latest_build
rp_ws/src/: skibid11y.txt  skibid1y.txt  skibidy.txt
(+107 files in other folders)
